@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.fugerit.java</groupId>
 		<artifactId>fj-daogen</artifactId>
-		<version>1.1.1-rc.1</version>
+		<version>1.1.1-rc.2</version>
 	</parent>
 
 	<name>fj-daogen-tool</name>
